// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CityCard.vue should create 1`] = `
<div class="city-card card">
  <div class="card-content cursor-pointer flex justify-between">
    <p>amstelveen</p>
    <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-400">
        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
      </svg>
      <!---->
    </div>
  </div>
  <hr style="display: none;">
  <div class="city-card-expansion" style="display: none;">
    <p class="text-sm font-semibold mt-1">Stores in city:</p>
  </div>
</div>
`;

exports[`CityCard.vue should open expansion panel 1`] = `
<div class="city-card card">
  <div class="card-content cursor-pointer flex justify-between">
    <p>amstelveen</p>
    <div>
      <!----> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-400">
        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"></path>
      </svg>
    </div>
  </div>
  <hr style="">
  <div class="city-card-expansion" style="">
    <p class="text-sm font-semibold mt-1">Stores in city:</p>
    <storecard-stub store="[object Object]" class="mt-3"></storecard-stub>
    <storecard-stub store="[object Object]" class="mt-3"></storecard-stub>
  </div>
</div>
`;

exports[`CityCard.vue should open expansion panel 2`] = `
<div class="city-card card">
  <div class="card-content cursor-pointer flex justify-between">
    <p>amstelveen</p>
    <div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-400">
        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
      </svg>
      <!---->
    </div>
  </div>
  <hr style="display: none;">
  <div class="city-card-expansion" style="display: none;">
    <p class="text-sm font-semibold mt-1">Stores in city:</p>
    <storecard-stub store="[object Object]" class="mt-3"></storecard-stub>
    <storecard-stub store="[object Object]" class="mt-3"></storecard-stub>
  </div>
</div>
`;

exports[`CityCard.vue should open expansion panel 3`] = `
<div class="city-card card">
  <div class="card-content cursor-pointer flex justify-between">
    <p>amstelveen</p>
    <div>
      <!----> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 text-gray-400">
        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"></path>
      </svg>
    </div>
  </div>
  <hr style="">
  <div class="city-card-expansion" style="">
    <p class="text-sm font-semibold mt-1">Stores in city:</p>
    <storecard-stub store="[object Object]" class="mt-3"></storecard-stub>
    <storecard-stub store="[object Object]" class="mt-3"></storecard-stub>
  </div>
</div>
`;
